# vietnamese-labor-law-ai-assistant

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.neo4j.yml  frontend.md  labor_law_rechunked_hierarchical.jsonl  pyproject.toml  test_groq.py  test_ollama.py
docs/: ARCHITECTURE.md  CI.md  PROJECT_OPTIMIZATION_PLAN.README.md  README_rechunking_labor_law.md  REPRODUCIBILITY.md  cypher_examples.md  labor_law_eval_100_scope_aligned.jsonl  legal_graph_augmented_rag.md  legal_graph_augmented_rag_neo4j_implementation_plan.md  legal_graph_ontology.md  legal_graph_rebuild_plan.md  neo4j_setup.md  project_scope.md  qdrant_cloud_level_3_plan.md  qdrant_timeout_ai_agent_task.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
llm-as-judge/: README.md  test_api.py
my-embedding-api/: README.md  hf_embedding_api_guide.md  main.py  requirements.txt
report/: .gitignore  README.md  main.tex
scripts/: ablation_retrieval_100.py  analyze_benchmark_failures.py  analyze_reference_edges_sanity.py  analyze_unresolved_reference_edges.py  ask.py  build_corpus.py  build_index.py  build_legal_chunks.py  build_legal_graph.py  build_legal_units.py  build_reference_edges.py  compute_100_split_metrics.py  create_qdrant_payload_indexes.py  enrich_legal_chunks.py  evaluate_end_to_end_rag.py  evaluate_graph_retrieval.py  evaluate_retrieval_modes.py  filter_blttds_labor_subset.py  fix_curated_text_issues.py  import_benchmark.py  inspect_legal_graph.py  rechunk_labor_law.py  run_benchmark.py  test_graph_augmented_retrieval.py  test_grounded_answer_generation.py  validate_curated_legal_texts.py
tests/: helpers.py  test_admin_api.py  test_answer_override_rules.py  test_answering.py  test_api_modularization.py  test_auth_store.py  test_blttds_labor_filter.py  test_chat_tracing.py  test_corpus_pipeline.py  test_cross_reference_parser.py  test_curated_text_validation.py  test_embeddings.py  test_end_to_end_rag_evaluation.py  test_evaluation.py  test_graph_augmented_retriever.py  test_indexing.py  test_legal_chunk_enrichment.py  test_legal_graph_builder.py  test_legal_graph_config.py  test_legal_graph_expander.py  test_legal_reference_edges.py  test_legal_unit_parser.py  test_llm.py  test_neo4j_graph_store.py  test_observability.py  test_query_router.py  (+8 more)
(+404 files in other folders)
