[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-labor-law-ai-assistant"
version = "0.1.0"
description = "Corpus preparation and local RAG experiments for Vietnamese labor law."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "groq>=0.24.0",
  "openpyxl>=3.1.5",
  "pypdf>=6.9.2",
  "PyMuPDF>=1.27.2",
  "pyvi>=0.1.1",
  "qdrant-client>=1.17.1",
  "sentence-transformers>=5.3.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]
