[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-labor-law-ai-assistant"
version = "0.1.0"
description = "Corpus preparation and local RAG experiments for Vietnamese labor law."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "groq>=0.24.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pypdf>=6.9.2",
  "PyMuPDF>=1.27.2",
  "PyYAML>=6.0",
  "pyvi>=0.1.1",
  "qdrant-client>=1.17.1",
  "sentence-transformers>=5.3.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vn_labor_law_ai_assistant = ["rules/*.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
strict = false
follow_imports = "skip"
